Fix: Point overflow for quizzer, auto focus for theme choosing

--- a/src/app/[roomCode]/page.module.scss
+++ b/src/app/[roomCode]/page.module.scss
@@ -833,6 +833,7 @@
   .chat {
     width: 35rem;
     height: 100%;
+    overflow: scroll;
     padding: 0 2.5rem;
     padding-top: 10rem;
     background-color: var(--off-white);
@@ -844,7 +845,7 @@
     .messageList {
       max-width: 100%;
       height: 100%;
-      overflow: hidden;
+      overflow: scroll;
       display: flex;
       flex-direction: column;
       gap: 1rem;
